# 100-great-humans

./: .env.example  .gitignore  .vercelignore  100-great-humans.md  LICENSE  POLLINATIONS_ENHANCED_FEATURES.md  README.md  README_WEB.md  deploy.sh  next.config.js  package-lock.json  package.json  pyproject.toml  setup.py  test-sdk.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml
api/: Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  requirements.txt  start_server.py  test_api.py  test_fastapi.py
app/: layout.tsx  page.tsx
components/: ChatInterface.tsx  EnhancedChatInterface-Old.tsx  EnhancedChatInterface.tsx  MultiModalChatInterface.tsx
data/people/: 001-muhammad.yml  002-isaac-newton.yml  003-jesus-of-nazareth.yml  004-gautama-buddha.yml  005-confucius.yml  006-paul-the-apostle.yml  007-cai-lun.yml  008-johannes-gutenberg.yml  011-louis-pasteur.yml  (+91 more)
examples/: advanced_demo.py  skills_demo.py
great_humans/: __init__.py  agent_enhanced.py  extended_skills.py  loader.py  proficiency.py  prompt.py  skill_chaining.py  skill_learning.py  skill_selector.py  skills.py
lib/: literouter.ts  pollinations-enhanced-broken.ts  pollinations-enhanced.ts  pollinations.ts  puter.ts
output/: agents-hart-100.json
scripts/: add_sources.py  audit_completeness.py  audit_completeness_fixed.py  audit_final.py  final_cleanup.py  finalize_standardization.py  fix_sensitive.py  generate_agents_json.py  generate_markdown_profiles.py  standardize_md.py
src/: README.md  agents.ts  example.ts  index.ts  test.ts
tests/: README.md  package.json  run-tests.js
(+145 files in other folders)
